# quickjs-recipe

./: .gitignore  LICENSE  README.md
01_hello/: CMakeLists.txt  main.cpp
01_hello/3rd/: CMakeLists.txt
02_load_js/: CMakeLists.txt  main.cpp  package.json  readme.md
02_load_js/generate/: generate.js
02_load_js/js/: hello.js  main.js  math.js  utils.js
03_ts_module/: CMakeLists.txt  CMakePresets.json  main.cpp
03_ts_module/ts/: main.js  utils.js
